--- a/src/store/columns.twig
+++ b/src/store/columns.twig
@@ -84,3 +84,39 @@
         </table>
     </td>
 </tr>
+
+
+
+{# Колонки, которые на мобильном перестраиваются в обратном порядке #}
+
+<td style="vertical-align: top; text-align: center; font-size: 0;" dir="rtl">
+    <!--[if (gte mso 9)|(IE)]>
+    <table width="100%" align="center" border="0" cellpadding="0" cellspacing="0">
+        <tr>
+            <td valign="top" width="320">
+    <![endif]-->
+
+
+    <table border="0" cellpadding="0" cellspacing="0" width="320" style="display: inline-block; vertical-align: top;">
+        <tr>
+            <td valign="top" width="320"  dir="ltr">
+                {# контент второй колонки #}
+            </td>
+        </tr>
+    </table><!--[if (gte mso 9)|(IE)]>
+    </td>
+    <td valign="top" width="320">
+    <![endif]--><table border="0" cellpadding="0" cellspacing="0" width="320" style="display: inline-block; vertical-align: top;">
+        <tr>
+            <td valign="top" width="320"  dir="ltr">
+                {# контент первой колонки #}
+            </td>
+        </tr>
+    </table>
+
+    <!--[if (gte mso 9)|(IE)]>
+    </td>
+    </tr>
+    </table>
+    <![endif]-->
+</td>
