--- a/src/templates/parts/hero.twig
+++ b/src/templates/parts/hero.twig
@@ -1,8 +1,9 @@
 <tr>
-    <td valign="top">
+    <td style="vertical-align: top;">
         <table border="0" cellpadding="0" cellspacing="0" width="100%">
             <tr>
-                <td valign="top"></td>
+                <td style="vertical-align: top; font-size: 0; width: 100%">
+                </td>
             </tr>
         </table>
     </td>
