--- a/src/templates/parts/second.twig
+++ b/src/templates/parts/second.twig
@@ -1,5 +1,5 @@
 <tr>
-    <td valign="top">
+    <td style="vertical-align: top;">
         <table border="0" cellpadding="0" cellspacing="0" width="100%">
             <tr>
                 <td style="vertical-align: top; text-align: center; font-size: 0;">
@@ -8,19 +8,19 @@
 
                     <table border="0" cellpadding="0" cellspacing="0" width="110" style="display: inline-block; vertical-align: top;">
                         <tr>
-                            <td valign="top" width="110">
+                            <td style="vertical-align: top;" width="110">
                                 {# контент колонки #}
                             </td>
                         </tr>
                     </table>{{    mx.msStep(90, 'top')    }}<table border="0" cellpadding="0" cellspacing="0" width="90" style="display: inline-block; vertical-align: top;">
                         <tr>
-                            <td valign="top" width="90">
+                            <td style="vertical-align: top;" width="90">
                                 {# контент колонки #}
                             </td>
                         </tr>
                     </table>{{    mx.msStep(105, 'top')    }}<table border="0" cellpadding="0" cellspacing="0" width="105" style="display: inline-block; vertical-align: top;">
                         <tr>
-                            <td valign="top" width="105">
+                            <td style="vertical-align: top;" width="105">
                                 {# контент колонки #}
                             </td>
                         </tr>
