* replace valign to vertical-align EVERYWHERE

--- a/src/store/buttons.twig
+++ b/src/store/buttons.twig
@@ -28,7 +28,7 @@
 {# кнопка с фоном #}
 
 <tr>
-    <td valign="top" style="padding-top: 10px; padding-bottom: 27px;">
+    <td style="vertical-align: top; padding-top: 10px; padding-bottom: 27px;">
         <table cellpadding="0" cellspacing="0" border="0" align="center">
             <tr>
                 <td style="vertical-align:top; text-align:center;">
@@ -54,7 +54,7 @@
 {# &nbsp; ~ 4px #}
 
 <tr>
-    <td valign="top" style="padding-top: 10px; padding-bottom: 27px;">
+    <td style="vertical-align: top; padding-top: 10px; padding-bottom: 27px;">
         <table cellpadding="0" cellspacing="0" border="0" align="center">
             <tr>
                 <td style="vertical-align:top; text-align:center;">
