--- a/src/store/columns.twig
+++ b/src/store/columns.twig
@@ -5,31 +5,31 @@
     <!--[if (gte mso 9)|(IE)]>
     <table width="100%" align="center" border="0" cellpadding="0" cellspacing="0">
         <tr>
-            <td valign="top" width="110">
+            <td width="110" style="vertical-align: top;">
     <![endif]-->
 
 
     <table border="0" cellpadding="0" cellspacing="0" width="110" style="display: inline-block; vertical-align: top;">
         <tr>
-            <td valign="top" width="110">
+            <td width="110" style="vertical-align: top;">
                 {# контент колонки #}
             </td>
         </tr>
     </table><!--[if (gte mso 9)|(IE)]>
     </td>
-    <td valign="top" width="90">
+    <td width="90" style="vertical-align: top;">
     <![endif]--><table border="0" cellpadding="0" cellspacing="0" width="90" style="display: inline-block; vertical-align: top;">
         <tr>
-            <td valign="top" width="90">
+            <td width="90" style="vertical-align: top;">
                 {# контент колонки #}
             </td>
         </tr>
     </table><!--[if (gte mso 9)|(IE)]>
     </td>
-    <td valign="top" width="105">
+    <td width="105" style="vertical-align: top;">
     <![endif]--><table border="0" cellpadding="0" cellspacing="0" width="105" style="display: inline-block; vertical-align: top;">
         <tr>
-            <td valign="top" width="105">
+            <td width="105" style="vertical-align: top;">
                 {# контент колонки #}
             </td>
         </tr>
@@ -50,7 +50,7 @@
 {# Macro #}
 
 <tr>
-    <td valign="top">
+    <td style="vertical-align: top;">
         <table border="0" cellpadding="0" cellspacing="0" width="100%">
             <tr>
                 <td style="vertical-align: top; text-align: center; font-size: 0;">
@@ -59,19 +59,19 @@
 
                     <table border="0" cellpadding="0" cellspacing="0" width="110" style="display: inline-block; vertical-align: top;">
                         <tr>
-                            <td valign="top" width="110">
+                            <td width="110" style="vertical-align: top;">
                                 {# контент колонки #}
                             </td>
                         </tr>
                     </table>{{    mx.msStep(90, 'top')    }}<table border="0" cellpadding="0" cellspacing="0" width="90" style="display: inline-block; vertical-align: top;">
                         <tr>
-                            <td valign="top" width="90">
+                            <td width="90" style="vertical-align: top;">
                                 {# контент колонки #}
                             </td>
                         </tr>
                     </table>{{    mx.msStep(105, 'top')    }}<table border="0" cellpadding="0" cellspacing="0" width="105" style="display: inline-block; vertical-align: top;">
                         <tr>
-                            <td valign="top" width="105">
+                            <td width="105" style="vertical-align: top;">
                                 {# контент колонки #}
                             </td>
                         </tr>
@@ -93,22 +93,22 @@
     <!--[if (gte mso 9)|(IE)]>
     <table width="100%" align="center" border="0" cellpadding="0" cellspacing="0">
         <tr>
-            <td valign="top" width="320">
+            <td width="320" style="vertical-align: top;">
     <![endif]-->
 
 
     <table border="0" cellpadding="0" cellspacing="0" width="320" style="display: inline-block; vertical-align: top;">
         <tr>
-            <td valign="top" width="320"  dir="ltr">
+            <td width="320"  dir="ltr" style="vertical-align: top;">
                 {# контент второй колонки #}
             </td>
         </tr>
     </table><!--[if (gte mso 9)|(IE)]>
     </td>
-    <td valign="top" width="320">
+    <td width="320" style="vertical-align: top;">
     <![endif]--><table border="0" cellpadding="0" cellspacing="0" width="320" style="display: inline-block; vertical-align: top;">
         <tr>
-            <td valign="top" width="320"  dir="ltr">
+            <td width="320"  dir="ltr" style="vertical-align: top;">
                 {# контент первой колонки #}
             </td>
         </tr>
