--- a/src/store/content.twig
+++ b/src/store/content.twig
@@ -1,7 +1,7 @@
 {# Адаптивный контент, разрывающий рамку #}
 
 <tr>
-    <td valign="top" width="100%" style="vertical-align: top; padding-right: 20px; padding-left: 20px; width: 100%; text-align: center">
+    <td width="100%" style="vertical-align: top; padding-right: 20px; padding-left: 20px; width: 100%; text-align: center">
         <table border="0" cellpadding="0" cellspacing="0" align="center" style="width: 600px; width: 100%!important; max-width: 600px; min-width: 320px; margin: 0 auto;">
             <tr>
                 <td style="vertical-align: bottom; min-width: 69px; width: 69px;">
@@ -18,14 +18,14 @@
                                 <!-- begin item --><!--[if (gte mso 9)|(IE)]><table width="320" align="center" cellpadding="0" cellspacing="0"
                                     border="0">
                                     <tr>
-                                        <td valign="top" width="150" style="vertical-align: top; text-align: center">
+                                        <td width="150" style="vertical-align: top; text-align: center">
                                 <![endif]--><table border="0" cellpadding="0" cellspacing="0" align="center" style="display: inline-block; vertical-align: top; min-width: 150px;">
                                     <tr>
                                         <td style="vertical-align: top; width: 150px; text-align: center"></td>
                                     </tr>
                                 </table><!--[if (gte mso 9)|(IE)]>
                                 </td>
-                                <td valign="top" width="150" style="vertical-align: top; text-align: center">
+                                <td width="150" style="vertical-align: top; text-align: center">
                                 <![endif]--><table border="0" align="center" cellpadding="0" cellspacing="0" style="display: inline-block; vertical-align: top; min-width: 150px">
                                     <tr>
                                         <td style="vertical-align: top; width: 150px; text-align: center"></td>
