--- a/src/templates/parts/header.twig
+++ b/src/templates/parts/header.twig
@@ -1,8 +1,8 @@
 <tr>
-    <td style="vertical-align: top">
-        <table border="0" cellpadding="0" cellspacing="0" width="100%">
+    <td style="vertical-align: top;">
+        <table border="0" cellpadding="0" cellspacing="0" width="100%" style="min-width: 100%;">
             <tr>
-                <td style="vertical-align: top"></td>
+                <td style="vertical-align: top;"></td>
             </tr>
         </table>
     </td>
