--- a/src/templates/parts/hero.twig
+++ b/src/templates/parts/hero.twig
@@ -1,9 +1,8 @@
 <tr>
     <td style="vertical-align: top;">
-        <table border="0" cellpadding="0" cellspacing="0" width="100%">
+        <table border="0" cellpadding="0" cellspacing="0" width="100%" style="min-width: 100%;">
             <tr>
-                <td style="vertical-align: top; font-size: 0; width: 100%">
-                </td>
+                <td style="vertical-align: top;"></td>
             </tr>
         </table>
     </td>
