--- a/src/templates/parts/second.twig
+++ b/src/templates/parts/second.twig
@@ -1,6 +1,6 @@
 <tr>
     <td style="vertical-align: top;">
-        <table border="0" cellpadding="0" cellspacing="0" width="100%">
+        <table border="0" cellpadding="0" cellspacing="0" width="100%" style="min-width: 100%;">
             <tr>
                 <td style="vertical-align: top; text-align: center; font-size: 0;">
 
