--- a/src/store/backgrounds.twig
+++ b/src/store/backgrounds.twig
@@ -1,6 +1,6 @@
 {# обычный #}
 
-<td height="277" background="http://www.emails.dev.nvtst.ru/dalee/kaspersky/1004495/bg2.jpg" bgcolor="#000000" style="vertical-align: top; background-image: url(http://www.emails.dev.nvtst.ru/dalee/kaspersky/1004495/bg2.jpg); background-position: center center; background-size: cover; background-color: #073F36;">
+<td height="277" background="http://www.emails.dev.nvtst.ru/dalee/kaspersky/1004495/bg2.jpg" bgcolor="#073F36" style="vertical-align: top; background-image: url(http://www.emails.dev.nvtst.ru/dalee/kaspersky/1004495/bg2.jpg); background-position: center center; background-size: cover; background-color: #073F36;">
 
     <!--[if gte mso 9]>
     <v:rect xmlns:v="urn:schemas-microsoft-com:vml" fill="true" stroke="false" style="width:650px;height:277px;">
@@ -8,7 +8,7 @@
         <v:textbox inset="0,0,0,0">
     <![endif]-->
 
-    <table border="0" cellpadding="0" cellspacing="0" width="100%">
+    <table border="0" cellpadding="0" cellspacing="0" width="100%" style="min-width: 100%;">
         <tr>
             <td style="vertical-align: top;"></td>
         </tr>
@@ -25,13 +25,13 @@
 {# фон-картинка #}
 {# для фона-картинки не должно быть никакого фона за ней, даже заливка body должна быть убрана (z-index:-1) #}
 
-<td height="300" background="http://emails.dev.nvtst.ru/Vichy/1004069/bg-hero.jpg" style="vertical-align: top; position: relative; font-size: 0; background-image: url(http://emails.dev.nvtst.ru/Vichy/1004069/bg-hero.jpg); background-position: center top; background-repeat: no-repeat; background-size: cover; background-color: #E6F6FF;">
+<td height="300" background="http://emails.dev.nvtst.ru/Vichy/1004069/bg-hero.jpg" style="vertical-align: top; position: relative; font-size: 0; background-image: url(http://emails.dev.nvtst.ru/Vichy/1004069/bg-hero.jpg); background-position: center top; background-repeat: no-repeat; background-size: cover;">
 
     <!--[if gte mso 9]>
     <v:image xmlns:v="urn:schemas-microsoft-com:vml" style="behavior: url(#default#VML); position: absolute; height: 300px; width: 600px; mso-position-horizontal: center; mso-position-horizontal-relative: text; top: 0px; z-index: -1;" src="http://emails.dev.nvtst.ru/Vichy/1004069/bg-hero.jpg"/>
     <![endif]-->
 
-    <table border="0" cellpadding="0" cellspacing="0" width="100%">
+    <table border="0" cellpadding="0" cellspacing="0" width="100%" style="min-width: 100%;">
         <tr>
             <td style="vertical-align: top;"></td>
         </tr>
