--- a/src/store/columns.twig
+++ b/src/store/columns.twig
@@ -87,7 +87,7 @@
 
 
 
-{# Колонки, которые на мобильном перестраиваются в обратном порядке #}
+{# Колонки, перестраивающиеся в обратном порядке #}
 
 <td style="vertical-align: top; text-align: center; font-size: 0;" dir="rtl">
     <!--[if (gte mso 9)|(IE)]>
