--- a/src/store/text.twig
+++ b/src/store/text.twig
@@ -1,5 +1,5 @@
 <tr>
-    <td style="vertical-align: top; padding: 20px 15px 0; font-family: Arial, sans-serif; font-size: 16px; line-height: 19px; font-weight: bold; text-transform: uppercase; text-align: center; color: #1c213f">
-        <span>Vichy</span> <span>Important</span> <span>Person</span> <span>(VIP)</span>
+    <td style="vertical-align: top; padding: 20px 15px 0; font-family: Arial, sans-serif; font-size: 16px; line-height: 19px; text-align: left; color: {{ textC }}">
+        <span>Lorem</span> <span>ipsum</span> <span>dolor</span> <span>sit</span> <span>amet.</span>
     </td>
 </tr>
