--- a/src/store/buttons.twig
+++ b/src/store/buttons.twig
@@ -2,7 +2,7 @@
 
 <tr>
     <td style="vertical-align:top;">
-        <table cellpadding="0" cellspacing="0" border="0" width="100%">
+        <table border="0" cellpadding="0" cellspacing="0" width="100%" style="min-width: 100%;">
             <tr>
                 <td style="vertical-align:top; text-align:center;">
                     <div>
