--- a/src/store/img.twig
+++ b/src/store/img.twig
@@ -1,11 +1,12 @@
-<img src="http://emails.dev.nvtst.ru/brand/9999999/simple-img.png" alt="alt" width="640" height="311" border="0" style="vertical-align: top; border: none; outline: none; font-family: Arial, sans-serif; font-size: 40px; font-weight: bold; line-height: 45px; color: #30444c;">
+{# simple #}
+<img src="http://emails.dev.nvtst.ru/brand/9999999/simple-img.png" alt="alt" width="640" height="311" border="0" style="vertical-align: top; border: none; outline: none; font-family: Arial, sans-serif; font-size: 25px; line-height: 1; font-weight: bold; color: #30444c;">
 
 
 {# responsive #}
-<img src="http://emails.dev.nvtst.ru/brand/9999999/simple-img.png" alt="alt" width="640" height="311" border="0" style="width: 100%; max-width: 640px; height: auto; vertical-align: top; border: none; outline: none; font-family: Arial, sans-serif; font-size: 40px; font-weight: bold; line-height: 45px; color: #30444c;">
+<img src="http://emails.dev.nvtst.ru/brand/9999999/simple-img.png" alt="alt" width="640" height="311" border="0" style="width: 100%; max-width: 640px; height: auto; vertical-align: top; border: none; outline: none; font-family: Arial, sans-serif; font-size: 25px; line-height: 1; font-weight: bold; color: #30444c;">
 
 
 {# a > img #}
-<a href="#" target="_blank" style="text-decoration: none; vertical-align: top; border: none; outline: none; font-family: Arial, sans-serif; font-size: 40px; font-weight: bold; line-height: 45px; color: #30444c;">
-    <img src="http://emails.dev.nvtst.ru/brand/9999999/simple-img.png" alt="alt" width="640" height="311" border="0" style="text-decoration: none; vertical-align: top; border: none; outline: none; font-family: Arial, sans-serif; font-size: 40px; font-weight: bold; line-height: 45px; color: #30444c;">
+<a href="#" target="_blank" style="text-decoration: none; vertical-align: top; border: none; outline: none; font-family: Arial, sans-serif; font-size: 40px; line-height: 1; font-weight: bold; color: #30444c;">
+    <img src="http://emails.dev.nvtst.ru/brand/9999999/simple-img.png" alt="alt" width="640" height="311" border="0" style="text-decoration: none; vertical-align: top; border: none; outline: none; font-family: Arial, sans-serif; font-size: 40px; line-height: 1; font-weight: bold; color: #30444c;">
 </a>
