--- a/src/store/columns.twig
+++ b/src/store/columns.twig
@@ -9,27 +9,27 @@
     <![endif]-->
 
 
-    <table border="0" cellpadding="0" cellspacing="0" width="110" style="display: inline-block; vertical-align: top;">
+    <table border="0" cellpadding="0" cellspacing="0" style="width: 110px; display: inline-block; vertical-align: top;">
         <tr>
-            <td width="110" style="vertical-align: top;">
+            <td style="width: 110px; vertical-align: top;">
                 {# контент колонки #}
             </td>
         </tr>
     </table><!--[if (gte mso 9)|(IE)]>
     </td>
     <td width="90" style="vertical-align: top;">
-    <![endif]--><table border="0" cellpadding="0" cellspacing="0" width="90" style="display: inline-block; vertical-align: top;">
+    <![endif]--><table border="0" cellpadding="0" cellspacing="0" style="width: 90px; display: inline-block; vertical-align: top;">
         <tr>
-            <td width="90" style="vertical-align: top;">
+            <td style="width: 90px; vertical-align: top;">
                 {# контент колонки #}
             </td>
         </tr>
     </table><!--[if (gte mso 9)|(IE)]>
     </td>
     <td width="105" style="vertical-align: top;">
-    <![endif]--><table border="0" cellpadding="0" cellspacing="0" width="105" style="display: inline-block; vertical-align: top;">
+    <![endif]--><table border="0" cellpadding="0" cellspacing="0" style="width: 105px; display: inline-block; vertical-align: top;">
         <tr>
-            <td width="105" style="vertical-align: top;">
+            <td style="width: 105px; vertical-align: top;">
                 {# контент колонки #}
             </td>
         </tr>
@@ -37,8 +37,8 @@
 
 
     <!--[if (gte mso 9)|(IE)]>
-            </td>
-        </tr>
+    </td>
+    </tr>
     </table>
     <![endif]-->
 
@@ -57,21 +57,21 @@
 
                     {{ mx.msStart('100%', '110', 'top') }}
 
-                    <table border="0" cellpadding="0" cellspacing="0" width="110" style="display: inline-block; vertical-align: top;">
+                    <table border="0" cellpadding="0" cellspacing="0" style="width: 110px; display: inline-block; vertical-align: top;">
                         <tr>
-                            <td width="110" style="vertical-align: top;">
+                            <td style="width: 110px; vertical-align: top;">
                                 {# контент колонки #}
                             </td>
                         </tr>
-                    </table>{{    mx.msStep(90, 'top')    }}<table border="0" cellpadding="0" cellspacing="0" width="90" style="display: inline-block; vertical-align: top;">
+                    </table>{{    mx.msStep(90, 'top')    }}<table border="0" cellpadding="0" cellspacing="0" style="width: 90px; display: inline-block; vertical-align: top;">
                         <tr>
-                            <td width="90" style="vertical-align: top;">
+                            <td style="width: 90px; vertical-align: top;">
                                 {# контент колонки #}
                             </td>
                         </tr>
-                    </table>{{    mx.msStep(105, 'top')    }}<table border="0" cellpadding="0" cellspacing="0" width="105" style="display: inline-block; vertical-align: top;">
+                    </table>{{    mx.msStep(105, 'top')    }}<table border="0" cellpadding="0" cellspacing="0" style="width: 105px; display: inline-block; vertical-align: top;">
                         <tr>
-                            <td width="105" style="vertical-align: top;">
+                            <td style="width: 105px; vertical-align: top;">
                                 {# контент колонки #}
                             </td>
                         </tr>
@@ -87,7 +87,7 @@
 
 
 
-{# Колонки, перестраивающиеся в обратном порядке #}
+{# Колонки, которые на мобильном перестраиваются в обратном порядке #}
 
 <td style="vertical-align: top; text-align: center; font-size: 0;" dir="rtl">
     <!--[if (gte mso 9)|(IE)]>
