--- a/src/templates/macro/comments.twig
+++ b/src/templates/macro/comments.twig
@@ -1,6 +1,6 @@
 {% macro msStart(tableWidth, tdWidth, valign, style) %}
 <!--[if (gte mso 9)|(IE)]>
-<table width="{{ tableWidth }}" align="center" cellpadding="0" cellspacing="0" border="0">
+<table width="{{ tableWidth }}" align="center" cellpadding="0" cellspacing="0" border="0" style="width: {{ tableWidth }}px;">
     <tr>
         <td valign="{{ valign }}" width="{{ tdWidth }}"{% if style %} style="{{ style }}"{% endif %}>
 <![endif]-->
