--- a/src/templates/parts/second.twig
+++ b/src/templates/parts/second.twig
@@ -1,26 +1,26 @@
 <tr>
     <td style="vertical-align: top;">
-        <table border="0" cellpadding="0" cellspacing="0" width="100%" style="min-width: 100%;">
+        <table border="0" cellpadding="0" cellspacing="0" width="100%">
             <tr>
                 <td style="vertical-align: top; text-align: center; font-size: 0;">
 
                     {{ mx.msStart('100%', '110', 'top') }}
 
-                    <table border="0" cellpadding="0" cellspacing="0" width="110" style="display: inline-block; vertical-align: top;">
+                    <table border="0" cellpadding="0" cellspacing="0" style="width: 110px; display: inline-block; vertical-align: top;">
                         <tr>
-                            <td style="vertical-align: top;" width="110">
+                            <td style="width: 110px; vertical-align: top;">
                                 {# контент колонки #}
                             </td>
                         </tr>
-                    </table>{{    mx.msStep(90, 'top')    }}<table border="0" cellpadding="0" cellspacing="0" width="90" style="display: inline-block; vertical-align: top;">
+                    </table>{{    mx.msStep(90, 'top')    }}<table border="0" cellpadding="0" cellspacing="0" style="width: 90px; display: inline-block; vertical-align: top;">
                         <tr>
-                            <td style="vertical-align: top;" width="90">
+                            <td style="width: 90px; vertical-align: top;">
                                 {# контент колонки #}
                             </td>
                         </tr>
-                    </table>{{    mx.msStep(105, 'top')    }}<table border="0" cellpadding="0" cellspacing="0" width="105" style="display: inline-block; vertical-align: top;">
+                    </table>{{    mx.msStep(105, 'top')    }}<table border="0" cellpadding="0" cellspacing="0" style="width: 105px; display: inline-block; vertical-align: top;">
                         <tr>
-                            <td style="vertical-align: top;" width="105">
+                            <td style="width: 105px; vertical-align: top;">
                                 {# контент колонки #}
                             </td>
                         </tr>
