--- a/src/store/columns.twig
+++ b/src/store/columns.twig
@@ -49,41 +49,33 @@
 
 {# Macro #}
 
-<tr>
-    <td style="vertical-align: top;">
-        <table border="0" cellpadding="0" cellspacing="0" width="100%">
-            <tr>
-                <td style="vertical-align: top; text-align: center; font-size: 0;">
+<td style="vertical-align: top; text-align: center; font-size: 0;">
 
-                    {{ mx.msStart('100%', '110', 'top') }}
+    {{ mx.msStart('100%', '110', 'top') }}
 
-                    <table border="0" cellpadding="0" cellspacing="0" style="width: 110px; display: inline-block; vertical-align: top;">
-                        <tr>
-                            <td style="width: 110px; vertical-align: top;">
-                                {# контент колонки #}
-                            </td>
-                        </tr>
-                    </table>{{    mx.msStep(90, 'top')    }}<table border="0" cellpadding="0" cellspacing="0" style="width: 90px; display: inline-block; vertical-align: top;">
-                        <tr>
-                            <td style="width: 90px; vertical-align: top;">
-                                {# контент колонки #}
-                            </td>
-                        </tr>
-                    </table>{{    mx.msStep(105, 'top')    }}<table border="0" cellpadding="0" cellspacing="0" style="width: 105px; display: inline-block; vertical-align: top;">
-                        <tr>
-                            <td style="width: 105px; vertical-align: top;">
-                                {# контент колонки #}
-                            </td>
-                        </tr>
-                    </table>
+    <table border="0" cellpadding="0" cellspacing="0" style="width: 110px; display: inline-block; vertical-align: top;">
+        <tr>
+            <td style="width: 110px; vertical-align: top;">
+                {# контент колонки #}
+            </td>
+        </tr>
+    </table>{{    mx.msStep(90, 'top')    }}<table border="0" cellpadding="0" cellspacing="0" style="width: 90px; display: inline-block; vertical-align: top;">
+        <tr>
+            <td style="width: 90px; vertical-align: top;">
+                {# контент колонки #}
+            </td>
+        </tr>
+    </table>{{    mx.msStep(105, 'top')    }}<table border="0" cellpadding="0" cellspacing="0" style="width: 105px; display: inline-block; vertical-align: top;">
+        <tr>
+            <td style="width: 105px; vertical-align: top;">
+                {# контент колонки #}
+            </td>
+        </tr>
+    </table>
 
-                    {{ mx.msEnd() }}
+    {{ mx.msEnd() }}
 
-                </td>
-            </tr>
-        </table>
-    </td>
-</tr>
+</td>
 
 
 
@@ -97,18 +89,18 @@
     <![endif]-->
 
 
-    <table border="0" cellpadding="0" cellspacing="0" width="320" style="display: inline-block; vertical-align: top;">
+    <table border="0" cellpadding="0" cellspacing="0" style="width: 320px; display: inline-block; vertical-align: top;">
         <tr>
-            <td width="320"  dir="ltr" style="vertical-align: top;">
+            <td dir="ltr" style="width: 320px; vertical-align: top;">
                 {# контент второй колонки #}
             </td>
         </tr>
     </table><!--[if (gte mso 9)|(IE)]>
     </td>
     <td width="320" style="vertical-align: top;">
-    <![endif]--><table border="0" cellpadding="0" cellspacing="0" width="320" style="display: inline-block; vertical-align: top;">
+    <![endif]--><table border="0" cellpadding="0" cellspacing="0" style="width: 320px; display: inline-block; vertical-align: top;">
         <tr>
-            <td width="320"  dir="ltr" style="vertical-align: top;">
+            <td dir="ltr" style="width: 320px; vertical-align: top;">
                 {# контент первой колонки #}
             </td>
         </tr>
