prevent php storm collapse

--- a/src/store/helpers.twig
+++ b/src/store/helpers.twig
@@ -1,8 +1,8 @@
 {# символ нулевой ширины #}
-&zwnj;
+{# &zwnj; #}
 
 {# неразрывный пробел #}
-&nbsp;
+{# &nbsp; #}
 
 {# неразрывное тире #}
-&#8209;
+{# &#8209; #}
