--- a/src/templates/layouts/_simple.twig
+++ b/src/templates/layouts/_simple.twig
@@ -7,6 +7,7 @@
     <meta name="format-detection" content="date=no">
     <meta name="format-detection" content="telephone=no">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="x-apple-disable-message-reformatting">
     <!--[if gte mso 9]><xml>
         <o:OfficeDocumentSettings>
             <o:Allowpng/>
