--- a/src/templates/macro/comments.twig
+++ b/src/templates/macro/comments.twig
@@ -1,6 +1,11 @@
+{#
+msStart:
+    tableWidth - если в конце стоит символ "%" - не дописываются "px". Значения: 100, 300, 100%, ...
+    tdWidth - Значения: 100, 300, 100%, ...
+#}
 {% macro msStart(tableWidth, tdWidth, valign, style) %}
 <!--[if (gte mso 9)|(IE)]>
-<table width="{{ tableWidth }}" align="center" cellpadding="0" cellspacing="0" border="0" style="width: {{ tableWidth }}px;">
+<table width="{{ tableWidth }}" align="center" cellpadding="0" cellspacing="0" border="0" style="width: {% if tableWidth[(tableWidth | length) - 1] == '%' %}{{ tableWidth }}{% else %}{{ tableWidth }}px{% endif %};">
     <tr>
         <td valign="{{ valign }}" width="{{ tdWidth }}"{% if style %} style="{{ style }}"{% endif %}>
 <![endif]-->
